// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Reducer Collection Logic should addStateCollectionItem 1`] = `
[
  {
    "id": "u",
    "val": "z",
  },
  {
    "id": "x",
    "val": "y",
  },
  {
    "id": "a",
    "val": "b",
  },
]
`;

exports[`Reducer Collection Logic should removeStateCollectionItem 1`] = `
[
  {
    "id": "a",
    "val": "b",
  },
]
`;

exports[`Reducer Collection Logic should removeStateCollectionItem with no match 1`] = `
[
  {
    "id": "x",
    "val": "y",
  },
  {
    "id": "a",
    "val": "b",
  },
]
`;

exports[`Reducer Collection Logic should updateStateCollectionItem 1`] = `
[
  {
    "id": "x",
    "val": "z",
  },
  {
    "id": "a",
    "val": "b",
  },
]
`;

exports[`Reducer Collection Logic should updateStateCollectionItem with no match 1`] = `
[
  {
    "id": "x",
    "val": "y",
  },
  {
    "id": "a",
    "val": "b",
  },
]
`;
